--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,11 @@ name = "pypi"
 [packages]
 numpy = "*"
 pymoo = "*"
+sklearn = "*"
+matplotlib = "*"
+pandas = "*"
+python-dotenv = "*"
+boto3 = "*"
 
 [dev-packages]
 
