--- a/check_vmi_opt_function/template.yaml
+++ b/check_vmi_opt_function/template.yaml
@@ -33,6 +33,9 @@ Resources:
     Properties:
       Name: "check-val-api"
       StageName: !Ref Stage
+      Cors:
+        AllowMethods: "'GET, OPTIONS'"
+        AllowOrigin: "'*'"
 
   CheckVMIFunction:
     Type: AWS::Serverless::Function
