Mod: Move model variable to constant folder

--- a/add_vmi_val_function/template.yaml
+++ b/add_vmi_val_function/template.yaml
@@ -75,7 +75,7 @@ Resources:
           FUNCTION_NAME: !Ref VMINashGAFunctionName
           REGION: !Ref Region
       Events:
-        GetOptProfitRequest:
+        AddValApi:
           Type: Api
           Properties:
             RestApiId: !Ref AddValApi
